<resources>
    <string name="app_name">BiuroInwentarz</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="employee_position">Stanowisko: %1$s</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="position">Stanowisko</string>
    <string name="email">Email</string>
    <string name="phone">Telefon</string>
    <string name="save">Zapisz</string>
    <string name="add_employee">Dodaj Pracownika</string>
    <string name="name_and_surname">Imię i Nazwisko</string>
    <string name="delete">Usuń</string>
    <string name="dashboard">Dashboard</string>
    <string name="room_list">Lista pomieszczeń</string>
    <string name="employee_list">Lista pracowników</string>
    <string name="inventory">Zarządzanie inwentarzem</string>
    <string name="quick_actions">Akcje Szybkie</string>
    <string name="add_item">Dodaj nowy przedmiot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="employee_details">Szczegóły Pracownika</string>
    <string name="add_room">Dodaj Pomieszczenie</string>
    <string name="room_name">Nazwa pomieszczenia</string>
    <string name="floor_number">Piętro</string>
    <string name="floor_number_display">Piętro: %1$d</string>
    <string name="purpose">Przeznaczenie</string>
    <string name="room_details">Szczegóły Pomieszczenia</string>
    <string name="type">Typ</string>
    <string name="current_quantity">Ilość obecna</string>
    <string name="min_quantity">Ilość minimalna</string>
    <string name="current_quantity_display">Ilość obecna: %1$d</string>
    <string name="item_details">Szczegóły Przedmiotu</string>
    <string name="room">Pomieszczenie</string>
    <string name="search_by_surname">Wyszukaj po nazwisku</string>
    <string name="download_geolocation">Pobierz Geolokację</string>
    <string name="latitude">Latitude: %1$.6f</string>
    <string name="longitude">Longitude: %1$.6f</string>
    <string name="about_us">o nas</string>
    <string name="please_fill_all_fields">Proszę wprowadzić wszystkie pola</string>
    <string name="please_select_room">Proszę wybrać pomieszczenie</string>
    <string name="quantities_must_be_integers">Ilości muszą być liczbami całkowitymi</string>
    <string name="item_added">Dodano przedmiot</string>
    <string name="item_updated">Zaktualizowano przedmiot</string>
    <string name="item_deleted">Usunięto przedmiot</string>
    <string name="quantity_below_minimum">Ilość mniejsza niż minimalna: %1$s</string>
    <string name="no_location_permission">Brak uprawnień do lokalizacji</string>
    <string name="please_provide_name_and_floor">Proszę podać nazwę i piętro</string>
    <string name="floor_must_be_integer">Piętro musi być liczbą całkowitą</string>
    <string name="added_room">Dodano pomieszczenie</string>
    <string name="updated_room">Zaktualizowano pomieszczenie</string>
    <string name="deleted_room">Usunięto pomieszczenie</string>
    <string name="please_provide_name_and_surname">Proszę podać imię i nazwisko</string>
    <string name="added_employee">Dodano pracownika</string>
    <string name="updated_employee">Zaktualizowano pracownika</string>
    <string name="deleted_employee">Usunięto pracownika</string>
    <string name="language_switch">PL/EN</string>
</resources>
