<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fragment_dashboard">

    <fragment
        android:id="@+id/fragment_dashboard"
        android:name="com.example.biuroinwentarz.ui.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboard_to_roomList"
            app:destination="@id/fragment_pomieszczenie_list" />

        <action
            android:id="@+id/action_dashboard_to_employeeList"
            app:destination="@id/fragment_pracownik_list" />

        <action
            android:id="@+id/action_dashboard_to_inventory"
            app:destination="@id/fragment_inwentarz_list" />

        <action
            android:id="@+id/action_dashboard_to_addItem"
            app:destination="@id/fragment_dodaj_przedmiot" />

        <action
            android:id="@+id/action_dashboard_to_addEmployee"
            app:destination="@id/fragment_pracownik_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_pracownik_list"
        android:name="com.example.biuroinwentarz.ui.PracownikListFragment"
        android:label="@string/employee_list"
        tools:layout="@layout/fragment_pracownik_list">
        <action
            android:id="@+id/action_to_pracownik_detail"
            app:destination="@id/fragment_pracownik_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_pracownik_detail"
        android:name="com.example.biuroinwentarz.ui.PracownikDetailFragment"
        android:label="@string/employee_details"
        tools:layout="@layout/fragment_pracownik_detail" />
    <fragment
        android:id="@+id/fragment_pomieszczenie_list"
        android:name="com.example.biuroinwentarz.ui.PomieszczenieListFragment"
        android:label="@string/room_list"
        tools:layout="@layout/fragment_pomieszczenie_list">
        <action
            android:id="@+id/action_to_pomieszczenie_detail"
            app:destination="@id/fragment_pomieszczenie_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_inwentarz_list"
        android:name="com.example.biuroinwentarz.ui.InwentarzListFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_inwentarz_list">

        <action
            android:id="@+id/action_to_inwentarz_detail"
            app:destination="@id/fragment_inwentarz_detail" />
    </fragment>

    <fragment
        android:id="@+id/fragment_inwentarz_detail"
        android:name="com.example.biuroinwentarz.ui.InwentarzDetailFragment"
        android:label="@string/item_details"
        tools:layout="@layout/fragment_inwentarz_detail" />
    <fragment
        android:id="@+id/fragment_dodaj_przedmiot"
        android:name="com.example.biuroinwentarz.ui.AddItemFragment"
        android:label="@string/add_item"
        tools:layout="@layout/fragment_add_item">
    </fragment>
    <fragment
        android:id="@+id/fragment_pomieszczenie_detail"
        android:name="com.example.biuroinwentarz.ui.PomieszczenieDetailFragment"
        android:label="@string/room_details"
        tools:layout="@layout/fragment_pomieszczenie_detail" />
</navigation>
